BOOKKEEPER-189: AbstractZkLedgerManager doesn't disregard cookies (ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1303291 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-186: Bookkeeper throttling - permits is not released when read has failed from all replicas (Rakesh R via sijie)
 
+        BOOKKEEPER-189: AbstractZkLedgerManager doesn't disregard cookies (ivank via sijie)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
