BOOKKEEPER-97: collect pub/sub/consume statistics on hub server (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1306798 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-96: extends zookeeper JMX to monitor and manage hedwig server (sijie via ivank)
 
+        BOOKKEEPER-97: collect pub/sub/consume statistics on hub server (sijie via ivank)
+
       bookkeeper-benchmark/
 	BOOKKEEPER-158: Move latest benchmarking code into trunk (ivank via fpj)
 
