BOOKKEEPER-166: Bookie will not recover its journal if the length prefix of an entry is truncated (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1307353 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -68,6 +68,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-194: Get correct latency for addEntry operations for JMX. (sijie via ivank)
 
+        BOOKKEEPER-166: Bookie will not recover its journal if the length prefix of an entry is truncated (ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
