BOOKKEEPER-193: Ledger is garbage collected by mistake. (sijie, ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1307725 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -70,6 +70,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-166: Bookie will not recover its journal if the length prefix of an entry is truncated (ivank)
 
+        BOOKKEEPER-193: Ledger is garbage collected by mistake. (sijie, ivank via sijie)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
