BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1309007 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -88,6 +88,10 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-163: Prevent incorrect NoSuchLedgerException for readLastConfirmed. (ivank via sijie)
 
+      bookkeeper-benchmark/
+	
+	BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)
+
     IMPROVEMENTS:
 
       bookkeeper-server/
