--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -78,6 +78,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-135: Fencing does not check the ledger masterPasswd (ivank)
 
+	BOOKKEEPER-212: Bookie stops responding when creating and deleting many ledgers (sijie via fpj)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
