BOOKKEEPER-211: Bookie fails to to start (sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1311564 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -80,6 +80,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-212: Bookie stops responding when creating and deleting many ledgers (sijie via fpj)
 
+        BOOKKEEPER-211: Bookie fails to to start (sijie)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
