BOOKKEEPER-216: Bookie doesn't exit with right exit code (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1326624 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-200: Fix format and comments (fpj)
 
+        BOOKKEEPER-216: Bookie doesn't exit with right exit code (sijie via ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
