BOOKKEEPER-196: Define interface between bookie and ledger storage (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1327027 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -86,6 +86,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-216: Bookie doesn't exit with right exit code (sijie via ivank)
 
+        BOOKKEEPER-196: Define interface between bookie and ledger storage (ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
