BOOKKEEPER-173: Uncontrolled number of threads in bookkeeper (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1328452 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -134,6 +134,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-218: Provide journal manager to manage journal related operations (sijie)
 
+	BOOKKEEPER-173: Uncontrolled number of threads in bookkeeper (sijie via fpj)
+
       hedwig-server/
 
         BOOKKEEPER-77: Add a console client for hedwig (Sijie Guo via ivank)
