--- a/doc/index.textile
+++ b/doc/index.textile
@@ -22,7 +22,8 @@ h1. Apache BookKeeper documentation
 * "Getting started":./bookkeeperStarted.html
 * "Programmer's Guide":./bookkeeperProgrammer.html
 * "Admin Guide":./bookkeeperConfig.html
-* "Bookie Server Configuration Parameters":./bookkeeperConfigParams.html
+* "Bookie Server Configuration Parameters":./bookieConfigParams.html
+* "BookKeeper Configuration Parameters":./bookkeeperConfigParams.html
 * "BookKeeper Internals":./bookkeeperInternals.html
 * "Bookie Recovery":./bookieRecovery.html
 * "Using BookKeeper stream library":./bookkeeperStream.html
