BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1329886 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -90,6 +90,10 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-213: PerChannelBookieClient calls the wrong errorOut function when encountering an exception (Aniruddha via sijie)
 
+      hedwig-client/
+
+        BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
