BOOKKEEPER-228: Fix the bugs in BK benchmark (umamaheswararao via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1334107 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -114,6 +114,8 @@ Trunk (unreleased changes)
 	
 	BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)
 
+        BOOKKEEPER-228: Fix the bugs in BK benchmark (umamaheswararao via ivank)
+
     IMPROVEMENTS:
 
       bookkeeper-server/
