BOOKKEEPER-229: Deleted entry log files would be garbage collected again and again. (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1335367 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -94,6 +94,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-232: AsyncBK tests failing (umamaheswararao via ivank)
 
+	BOOKKEEPER-229: Deleted entry log files would be garbage collected again and again. (sijie via fpj)
+
       hedwig-client/
 
         BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
