BOOKKEEPER-241: Add documentation for bookie entry log compaction (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1335947 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -150,6 +150,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-173: Uncontrolled number of threads in bookkeeper (sijie via fpj)
 
+	BOOKKEEPER-241: Add documentation for bookie entry log compaction (sijie via fpj)
+
       hedwig-server/
 
         BOOKKEEPER-77: Add a console client for hedwig (Sijie Guo via ivank)
