BOOKKEEPER-245: Intermittent failures in PersistanceManager tests (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1336569 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -122,6 +122,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-215: Deadlock occurs under high load (sijie via ivank)
 
+        BOOKKEEPER-245: Intermittent failures in PersistanceManager tests (ivank)
+
       bookkeeper-benchmark/
 	
 	BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)
