BOOKKEEPER-209: Typo in ServerConfiguration for READAHEAD_ENABLED (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1338630 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -128,6 +128,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-245: Intermittent failures in PersistanceManager tests (ivank)
 
+        BOOKKEEPER-209: Typo in ServerConfiguration for READAHEAD_ENABLED (ivank)
+
       bookkeeper-benchmark/
 	
 	BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)
