BOOKKEEPER-254: Bump zookeeper version in poms (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1339672 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-145: Put notice and license file for distributed binaries in SVN (ivank)
 
+      BOOKKEEPER-254: Bump zookeeper version in poms (ivank)
+
       bookkeeper-server/
 
         BOOKKEEPER-142: Parsing last log id is wrong, which may make entry log files overwritten (Sijie Gou via ivank)
