BOOKKEEPER-238: Add log4j.properties in conf/ for bin packages (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1339698 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-72: Fix warnings issued by FindBugs (ivank)
 
+      BOOKKEEPER-238: Add log4j.properties in conf/ for bin packages (ivank)
+
       bookkeeper-server/
 
         BOOKKEEPER-142: Parsing last log id is wrong, which may make entry log files overwritten (Sijie Gou via ivank)
