BOOKKEEPER-146: TestConcurrentTopicAcquisition sometimes hangs (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1342550 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -138,6 +138,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-209: Typo in ServerConfiguration for READAHEAD_ENABLED (ivank)
 
+        BOOKKEEPER-146: TestConcurrentTopicAcquisition sometimes hangs (ivank)
+
       bookkeeper-benchmark/
 	
 	BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)
