BOOKKEEPER-265: Review JMX documentation (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1342646 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -150,6 +150,8 @@ Trunk (unreleased changes)
 
     IMPROVEMENTS:
 
+	BOOKKEEPER-265: Review JMX documentation (sijie via fpj)
+
       bookkeeper-server/
 
         BOOKKEEPER-95: extends zookeeper JMX to monitor and manage bookie server (Sijie Guo via ivank)
