BOOKKEEPER-258: CompactionTest failed (ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1342933 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -116,6 +116,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-266: Review versioning documentation (ivank)
 
+        BOOKKEEPER-258: CompactionTest failed (ivank via sijie)
+
       hedwig-client/
 
         BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
