BOOKKEEPER-269: Review documentation for hedwig console client (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1343973 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/index.textile
+++ b/doc/index.textile
@@ -40,4 +40,5 @@ h1. Apache Hedwig documentation
 
 h2. Hedwig Admin & Ops
 
+* "Hedwig Console":./hedwigConsole.html
 * "Hedwig JMX":./hedwigJMX.html
