--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -198,6 +198,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-97: collect pub/sub/consume statistics on hub server (sijie via ivank)
 
+	BOOKKEEPER-269: Review documentation for hedwig console client (sijie via fpj)
+
       bookkeeper-benchmark/
 	BOOKKEEPER-158: Move latest benchmarking code into trunk (ivank via fpj)
 
