BOOKKEEPER-270: Review documentation on bookie cookie (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1343986 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -188,6 +188,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-260: Define constant for -1 (invalid entry id) (ivank via fpj)
 
+	BOOKKEEPER-270: Review documentation on bookie cookie (ivank via fpj)
+
       hedwig-server/
 
         BOOKKEEPER-77: Add a console client for hedwig (Sijie Guo via ivank)
