--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -122,6 +122,8 @@ Release 4.1.0 - 2012-05-31
 
         BOOKKEEPER-281: BKClient is failing when zkclient connection delays (ivank via sijie)
 
+        BOOKKEEPER-279: LocalBookKeeper is failing intermittently due to zkclient connection establishment delay (Rakesh R via sijie)
+
       hedwig-client/
 
         BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
