--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -126,6 +126,8 @@ Release 4.1.0 - 2012-05-31
 
         BOOKKEEPER-286: Compilation warning (ivank via sijie)
 
+        BOOKKEEPER-287: NoSuchElementException in LedgerCacheImpl (sijie)
+
       hedwig-client/
 
         BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
