--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -128,6 +128,8 @@ Release 4.1.0 - 2012-05-31
 
         BOOKKEEPER-287: NoSuchElementException in LedgerCacheImpl (sijie)
 
+        BOOKKEEPER-288: NOTICE files don't have the correct year (ivank via sijie)
+
       hedwig-client/
 
         BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
