--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,10 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)
 
+      bookkeeper-server:
+
+        BOOKKEEPER-183: Provide tools to read/check data files in bookie server (sijie via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
