--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,17 @@
+Release 4.1.1 - UNRELEASED
+
+  Non-backward compatible changes:
+
+    BUGFIXES:
+
+    IMPROVEMENTS:
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
+    IMPROVEMENTS:
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
