BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1351366 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Release 4.1.1 - UNRELEASED
 
     IMPROVEMENTS:
 
+      BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
